--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "Hassan Amin",
   "license": "ISC",
   "dependencies": {
+    "@google-cloud/text-to-speech": "^1.1.2",
     "amqplib": "^0.5.3",
     "async": "^3.1.0",
     "aws-sdk": "^2.480.0",
